--- a/index.html
+++ b/index.html
@@ -1,4 +1,13 @@
 <html>
   <head>UPI Lite</head>
   <body></body>
+  <script>
+    document.addEventListener("DOMContentLoaded", function() {
+      const upiLitePaymentUrl = "upi://pay?pa=9597851787@axl&pn=Prakaash&am=1.00&mc=123&tid=123456789012345678901234567890";
+      const anchorButton = document.createElement("a");
+      anchorButton.href = upiLitePaymentUrl;
+      anchorButton.textContent = "Hello!";
+      document.body.appendChild(anchorButton);
+    });
+  </script>
 </html>
