--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
   <body></body>
   <script>
     document.addEventListener("DOMContentLoaded", function() {
-      const upiLitePaymentUrl = "upi://pay?pa=9597851787@axl&pn=Prakaash&am=1.00&mc=123&tid=123456789012345678901234567890";
+      const upiLitePaymentUrl = "upi://pay?pa=santhosh24338@okhdfcbank&pn=Cyber_Freaks&am=1.00&mc=123&tid=123456789012345678901234567890";
       const anchorButton = document.createElement("a");
       anchorButton.href = upiLitePaymentUrl;
       anchorButton.textContent = "Hello!";
