--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
   <body></body>
   <script>
     document.addEventListener("DOMContentLoaded", function() {
-      const upiLitePaymentUrl = "upi://pay?pa=shanthicmurugesan@okicici&pn=Cyber_Freaks&am=1.00";
+      const upiLitePaymentUrl = "upi://pay?pa=prakaash3775@oksbi&pn=Cyber_Freaks&am=1.00";
       const anchorButton = document.createElement("a");
       anchorButton.href = upiLitePaymentUrl;
       anchorButton.textContent = "Hello!";
